Resolução de issue : Integer Instantiation